# dosiz

./: .gitignore  CLAUDE.md  DEBUGGING.md  Makefile  README.md  WIP.md  WIP.txt  todo.txt
.github/workflows/: ci.yml
docs/: BUILDING.md  CREDITS.md  ROADMAP.md  c-toolchain-guide.md  djgpp-libc-cpp-crash.md  watcom-setup.md
examples/: example.cfg
patches/: README.md  enet-clock-gettime-mingw.patch  sdlmain-expose-setup.patch  sdlmain-skip-gl-probe-headless.patch  watcom-wlink.lnk
src/: CMakeLists.txt  bridge.cc  bridge.h  config.cc  config.h  debug_settings.cpp  debug_settings.hpp  dosbox_conf.cc  dosbox_conf.h  dosemu.cc  dosiz.cc
tests/: CAT.COM  DOS4G_PROBE.COM  DPMI_CALLRM.COM  DPMI_CALLRMI.COM  DPMI_DESCMGMT.COM  DPMI_DOSMEM.COM  DPMI_EXC.COM  DPMI_EXTRA.COM  DPMI_PMIDT.COM  DPMI_PROBE.COM  DPMI_REFLECT.COM  DPMI_RMCB.COM  DPMI_STAGE2.COM  DPMI_STAGE4B.COM  DPMI_STAGE4C.COM  DPMI_STAGE5.COM  EMS_PROBE.COM  GRAND.COM  HELLO.COM  HMA_PROBE.COM  LISTDIR.COM  MIDDLE.COM  SPAWN.COM  SURVIVE.COM  SYSCALLS.COM  VCPI_PROBE.COM  WRITE.COM  cat.asm  dos4g_probe.asm  dpmi_callrm.asm  dpmi_callrmi.asm  dpmi_descmgmt.asm  dpmi_dosmem.asm  dpmi_exc.asm  dpmi_extra.asm  dpmi_int31.asm  dpmi_integration.asm  dpmi_pmalloc.asm  dpmi_pmidt.asm  dpmi_probe.asm  (+22 more)
tests/djgpp/: README.md  bigtest.cpp  build.sh  dj_dje.c  dj_ems.c  dj_env.c  dj_nest3.c  run.sh
